Fixed hover states on contact buttons dark mode

--- a/style.scss
+++ b/style.scss
@@ -482,7 +482,6 @@ h5 {
   }
   li {
     list-style: none;
-    border: solid 3px var(--primary-color);
     border-radius: 5px;
     font-weight: bold;
     font-size: 1.875rem;
@@ -491,16 +490,25 @@ h5 {
     // padding: 0.5rem 0;
     margin-bottom: 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    color: var(--primary-color);
+    // color: var(--primary-color);
     transition: 0.25s ease-in-out;
     &:nth-last-of-type(1){
       margin-bottom: 0;
     }
     &:hover {
       i, p {
-        color: white;
+        // color: white;
       }
+      // background-color: var(--primary-color);
+    }
+  }
+  .li-light-mode {
+    border: solid 3px var(--primary-color);
+    background-color: white;
+    color: var(--primary-color);
+    &:hover {
       background-color: var(--primary-color);
+      color: white;
     }
   }
   .li-dark-mode {
